# squid

./: README.md  SECURITY.md  meson.build
.github/workflows/: meson_ci.yml
code/: meson.build
code/logic/: app.c  calc.c  echo.c  env.c  health.c  help.c  inspect.c  introspect.c  magic.c  meson.build  monitor.c  network.c  notebook.c  permit.c  ping.c  process.c  scan.c  service.c  system.c  this.c  view.c
code/logic/fossil/code/: app.h  commands.h  common.h
code/tests/cases/: test_echo.c  test_env.c  test_network.c  test_permit.c  test_ping.c  test_process.c  test_sample.c  test_scan.c  test_service.c  test_system.c  test_this.c
subprojects/: fossil-cryptic.wrap  fossil-io.wrap  fossil-math.wrap  fossil-network.wrap  fossil-sys.wrap  fossil-test.wrap  fossil-threads.wrap
